fixed some definition errors & added few lines from discussion

--- a/building_transformer_overview.ipynb
+++ b/building_transformer_overview.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "d846dad2",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "S7YvD8GPzXe426Rr4bvd",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": null
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -24,7 +33,15 @@
   {
    "cell_type": "markdown",
    "id": "f81fdae7",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "gRdjzJjsA5dgYn75kSZp",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
     "# Transformers\n",
     "Built with encoder-decoder architecture.\n",
@@ -40,7 +57,15 @@
   {
    "cell_type": "markdown",
    "id": "650715f4",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "eGEbGNVYEA6XhFrmtZj8",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
     "## Self-Attention\n",
     "A mapping of a query and a set of key-value pairs to an output, where the query, keys, values, and output are vectors.\n",
@@ -83,7 +108,20 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "18c4809e",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "bsjyPakLfO4OlmZWwacB",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": {
+      "block": "Xnw1zUmTRvNq15i8Xxg8",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -198,7 +236,15 @@
   {
    "cell_type": "markdown",
    "id": "f1dd499d",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "R5KwsCoxRfvApecZ7HjY",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
     "## Multihead attention\n",
     "\n",
@@ -218,16 +264,31 @@
     "         \n",
     "where $W_{o} \\in \\mathbb{R}^{p_{0} \\times hp_{v}}$\n",
     "\n",
+    "by creating sub queries and keys we can get more of an idea of context. We can see how queries score given different sub-set of keys and values. Example: *The dog did not cross the road because it was too hot.* Now what is *it* refering to, the dog or the road?\n",
+    "\n",
     "Another perk of the multihead attention is that each head can be calculated in parallel.\n",
     "         \n",
-    "Let look at the implimentation:\n"
+    "Lets look at the implimentation:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "id": "2ad079fa",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "qMjcfH9ZbFa8G6FrqQxi",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": {
+      "block": "DQnOcRN4Jy3EWwaTdjSb",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -322,7 +383,15 @@
   {
    "cell_type": "markdown",
    "id": "a58b5641",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "3rKLp9dGYe6nLvEb99bA",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
     "## Encoder\n",
     "\n",
@@ -344,7 +413,16 @@
    "cell_type": "code",
    "execution_count": 130,
    "id": "f4a87bfc",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "CL3VqpfJERgQ1poQWtLs",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": null
+    }
+   },
    "outputs": [],
    "source": [
     "class EncoderBlock(nn.Module):\n",
@@ -418,7 +496,15 @@
   {
    "cell_type": "markdown",
    "id": "4d05f01e",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "ytK58ZicffTWHP6QKVZI",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
     "## Decoder\n",
     "\n",
@@ -442,7 +528,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "64fd4016",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "vkHdEkMhwbvixEzHNcQT",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": null
+    }
+   },
    "outputs": [],
    "source": [
     "class DecoderBlock(nn.Module):\n",
@@ -516,7 +611,15 @@
   {
    "cell_type": "markdown",
    "id": "f2fe854b",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "cSwsLLdJSs9yMgI0uLQN",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
     "### Masking example"
    ]
@@ -525,7 +628,20 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "0e723e38",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "wFNVmcivxnhpkxehtBTh",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": {
+      "block": "aKE2aOiud759bK6jAs8m",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -555,16 +671,34 @@
   {
    "cell_type": "markdown",
    "id": "dd03c988",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "4fLhaxr8oy0qPF781kzk",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
-    "## Create the transformer"
+    "## Create the transformer\n",
+    "Gather all our pieces and setup the full model that needs to be trained"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8d93bb5b",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "cveU4RY96au1zTn06PZy",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": null
+    }
+   },
    "outputs": [],
    "source": [
     "class transformer(nn.Module):\n",
@@ -599,9 +733,21 @@
   {
    "cell_type": "markdown",
    "id": "2bb2c019",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "XTdb8PPGBkYap6ahW4vv",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
+    "# How about the inputs to the system?\n",
+    "\n",
     "## Tokenizing a sentence\n",
+    "Often the inputs need to be translated to something that a computer can read. Be is words, letters, pieces of images, etc.\n",
+    "For example in language processing\n",
     "- takes in a string sentence and splits it into its tokens\n",
     "- converts token list into a torch tensor"
    ]
@@ -610,7 +756,20 @@
    "cell_type": "code",
    "execution_count": 103,
    "id": "2693ee82",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "h4s12cZKtQmv1NfqX3rO",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": {
+      "block": "nPGqXohiN1FCmeGXdSmZ",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -643,18 +802,40 @@
   {
    "cell_type": "markdown",
    "id": "4c526d66",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "iOpCjjUhbIwc3MUZ4UIa",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
     "## Create an embedding function for our intput\n",
+    "Takes the tokens and:\n",
     "- creates a embedded object of our sentence (A simple lookup table that stores embeddings of a fixed dictionary and size)\n",
-    "- size of embedderis vocabulary size by model dimension. "
+    "- forms the size of embedder as vocabulary size by model dimension. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
    "id": "bd55d687",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "KPe654Ib9BLWdXMjt4SG",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": {
+      "block": "WBIoBRBE4MhU1YAhnObp",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -689,9 +870,17 @@
   {
    "cell_type": "markdown",
    "id": "fc320853",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "V3kllgEMduz2TS4mhWcz",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "source": [
-    "## Create the Positional Embedding function\n",
+    "## Add a Positional Embedding function to the inputs\n",
     "- embeds a position to each token so the model can learn what order the input items are in\n",
     "- incorporates a dropout functionality"
    ]
@@ -700,7 +889,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "2d9071c9",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "4MsBSc1UTu9vHb0z3Lwb",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": {
+      "block": "U0fOY5R4a2qbfGvYKxmY",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -756,7 +958,20 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "e3866bd6",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "enl4OJMPXVm1lhjuIzpv",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": {
+      "block": "r5oORbcJAmgA7E1sYxVf",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -792,7 +1007,20 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "89be1211",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "CbIWYeBZEWiI2WhcL3aA",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": {
+      "block": "tEMvCbCTYpLG01BBUxuW",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     }
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -839,7 +1067,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d05ce63",
-   "metadata": {},
+   "metadata": {
+    "iooxa": {
+     "id": {
+      "block": "pEphQ47U8PBdcqtvjot5",
+      "project": "tkla1JiXNwJ5OmYXjbnT",
+      "version": 1
+     },
+     "outputId": null
+    }
+   },
    "outputs": [],
    "source": [
     "self.proj = nn.Linear(d_model, vocab)"
@@ -855,6 +1092,13 @@
   }
  ],
  "metadata": {
+  "iooxa": {
+   "id": {
+    "block": "VaMdkp0UB05UsXmCaJC6",
+    "project": "tkla1JiXNwJ5OmYXjbnT",
+    "version": 1
+   }
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -870,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
