added image src for notebook

--- a/building_transformer_overview.ipynb
+++ b/building_transformer_overview.ipynb
@@ -48,7 +48,7 @@
     "- The encoder maps an input sequence of length $n$, **x** $ = (x_{0}, ... , x_{n})$ to a continuous representation **z** $= (z_{0}, ... , z_{n})$.\n",
     "- Given **z** the decoder generates the outputs **y** $ = (y_{0}, ... , y_{m})$ where $m$ is length of output sequence.\n",
     "\n",
-    "![Transformers](ModalNet-21.png)\n",
+    "![Transformers](images/ModalNet-21.png)\n",
     "\n",
     "\n",
     "- The model is auto-regressive meaning each predicted item (word) is predicted from the previous decoder input $y_{n-1}$ \n"
