cleaned up tdem notebook code

--- a/PGI/tdem/tdem-forward-model-notebook.ipynb
+++ b/PGI/tdem/tdem-forward-model-notebook.ipynb
@@ -617,6 +617,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Save the fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved  {'bSolution': array([[-5.79497085e-19, -4.57676569e-19, -3.50403142e-19, ...,\n",
+      "        -3.63703009e-20, -2.75248215e-20, -2.07776090e-20],\n",
+      "       [ 9.50323656e-19,  9.02182637e-19,  8.53194545e-19, ...,\n",
+      "        -3.44152539e-20, -2.58187435e-20, -1.93885973e-20],\n",
+      "       [ 6.44937425e-19,  6.32068909e-19,  6.19563767e-19, ...,\n",
+      "        -1.05460492e-20, -8.29184161e-21, -6.40502948e-21],\n",
+      "       ...,\n",
+      "       [-3.01647239e-19,  8.86283246e-21,  8.31299103e-21, ...,\n",
+      "         7.11043826e-21,  5.35075525e-21,  4.03101446e-21],\n",
+      "       [-5.45449640e-20,  4.28351555e-20,  4.07828574e-20, ...,\n",
+      "         6.36987920e-21,  4.78961453e-21,  3.60635764e-21],\n",
+      "       [-8.18983880e-19, -7.69009719e-19, -7.23955668e-19, ...,\n",
+      "         1.26491540e-20,  9.67143758e-21,  7.36032705e-21]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save the data\n",
+    "directory = '.'\n",
+    "\n",
+    "# create half space result\n",
+    "fields['halfspace'] = sim.fields(np.log(sigBG[active]))\n",
+    "\n",
+    "for key in fields.keys():\n",
+    "\n",
+    "    for ii in range(len(gates)):\n",
+    "\n",
+    "        gate = gates[ii]\n",
+    "\n",
+    "        np.save(f\"{directory}/fields_{key}_{gate}\", fields[key][source_list[ii], :]['bSolution'])\n",
+    "\n",
+    "print(\"saved \")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Profile plots"
    ]
   },
@@ -630,7 +681,7 @@
     "\n",
     "print(profile_hold.shape)\n",
     "\n",
-    "for ii in range(3):\n",
+    "for ii in range(profile_hold.shape[0]):\n",
     "    plt.semilogy(np.arange(0, 1000, 100), -profile_hold[ii, :], '-ok')\n",
     "# plt.plot\n",
     "plt.show()"
@@ -639,64 +690,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "iooxa": {
-     "id": {
-      "block": "lK4jdZjag6Pks9Wz51Q5",
-      "project": "q0ZJwGsqqSOExzgbnA6U",
-      "version": 1
-     },
-     "outputId": null
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# np.save('Lb-imp_all-obs.npy', survey.dobs)\n",
-    "# np.save('Lb-imp-all-dpred_pre.npy', invProb.dpred)\n",
-    "# plt.plot(mkvc(stdnew), '.r')\n",
-    "# plt.plot(survey.std, '.', ms=1)\n",
-    "# plt.show()\n",
-    "\n",
-    "## Fill the data object\n",
-    "# fwd_data.dobs = sim.survey.dobs\n",
-    "# fwd_data.standard_deviation = stdnew.flatten()  # sim.survey.std\n",
-    "# sim.survey.std = stdnew.flatten()\n",
-    "# survey.std = stdnew.flatten()\n",
-    "\n",
-    "# plt.plot(survey.dobs, '.r')\n",
-    "# plt.plot(survey.std, '.', ms=1)\n",
-    "# plt.show()\n",
-    "\n",
-    "print(np.sum([1e-4 * 10, 1e-3 * 10, 1.5e-2 * 10]), np.sum(offtime_steps))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# simulation plotting\n",
-    "source_list = src_list\n",
-    "# import time\n",
-    "# active = actinds\n",
-    "# source_list = src_list\n",
-    "# models = {\n",
-    "\n",
-    "#     \"L_block\": np.log(model[active]),\n",
-    "# }\n",
-    "\n",
-    "# fields = {}\n",
-    "\n",
-    "# for key, sig in models.items():\n",
-    "#     if key not in fields.keys(): \n",
-    "#         print(f\"starting {key}\")\n",
-    "#         t = time.time()\n",
-    "#         fields[key] = sim.fields(sig)\n",
-    "#         print(f\"done {key}... elapsed time: {time.time()-t:1.1e}s \\n\")\n",
-    "\n",
     "from matplotlib.colors import LogNorm, Normalize\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(10, 10)) \n",
+    "\n",
+    "# ---------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "# plot the profile subplots\n",
+    "\n",
+    "#\n",
+    "\n",
+    "data_dict = fwd_data\n",
+    "\n",
+    "# lets plot some plots\n",
+    "fig, ax = plt.subplots(3, 2, figsize=(10, 10))\n",
+    "idx = 8\n",
+    "\n",
+    "for ii in range(profile_hold.shape[0]):\n",
+    "    \n",
+    "    ax[1, 1].semilogy(np.arange(0, 1000, 100), profile_hold[ii, :], '-ok')\n",
+    "\n",
+    "ax[1, 1].legend()\n",
+    "ax[1, 1].text(-0.1, 1.15, 'd)', transform=ax[1, 1].transAxes,\n",
+    "      fontsize=16, fontweight='bold', va='top', ha='right')\n",
+    "ax[1, 1].set_title('Line 800E')\n",
+    "ax[2, 1].set_title('Line 800E imag')\n",
+    "ax[2, 1].legend()\n",
+    "ax[2, 1].text(-0.1, 1.15, 'f)', transform=ax[2, 1].transAxes,\n",
+    "      fontsize=16, fontweight='bold', va='top', ha='right')\n",
+    "\n",
+    "# ---------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "# plot the plan-map subplots\n",
+    "\n",
+    "#\n",
+    "\n",
+    "key = \"10\"\n",
+    "im = utils.plot_utils.plot2Ddata(receivers, profile_data[key]['real'][0], ax=ax[1, 0], contourOpts={'cmap':'Spectral'})\n",
+    "ax[1, 0].set_title(f\"{key} Hz {comps_[0]}\")\n",
+    "plt.colorbar(im[0])\n",
+    "\n",
+    "ax[1, 0].text(-0.1, 1.15, 'c)', transform=ax[1, 0].transAxes,\n",
+    "      fontsize=16, fontweight='bold', va='top', ha='right')\n",
+    "\n",
+    "im = utils.plot_utils.plot2Ddata(receivers, profile_data[key]['imag'][0], ax=ax[2, 0], contourOpts={'cmap':'Spectral'})\n",
+    "ax[2, 0].set_title(f\"{key} Hz {comps_[1]}\")\n",
+    "plt.colorbar(im[0])\n",
+    "\n",
+    "ax[2, 0].text(-0.1, 1.15, 'e)', transform=ax[2, 0].transAxes,\n",
+    "      fontsize=16, fontweight='bold', va='top', ha='right')\n",
+    "\n",
+    "# ---------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "# plot the slice of currents and B-field subplots\n",
+    "\n",
+    "#\n",
+    "\n",
+    "ax[0, 0].text(-0.1, 1.15, 'a)', transform=ax[0, 0].transAxes,\n",
+    "      fontsize=16, fontweight='bold', va='top', ha='right')\n",
+    "\n",
+    "ax[0, 1].text(-0.1, 1.15, 'b)', transform=ax[0, 1].transAxes,\n",
+    "      fontsize=16, fontweight='bold', va='top', ha='right')\n",
     "\n",
     "frequencies = gates\n",
     "\n",
@@ -705,7 +760,7 @@
     "\n",
     "key = \"L_block\"\n",
     "src_ind = 50\n",
-    "time_ind = 10\n",
+    "time_ind = 30\n",
     "\n",
     "print(len(source_list), fields[key][source_list[src_ind], \"j\"][:, time_ind].min(), fields[key][source_list[src_ind], \"j\"][:, 21].max(), sim.time_steps)\n",
     "# plt.hist(model[active])\n",
@@ -719,28 +774,15 @@
     "ax.set_xlim(xlim)\n",
     "ax.set_ylim(xlim)\n",
     "ax.set_title(f\"J imag, {np.sum(sim.time_steps[:21])} sec, XZ-slice\")\n",
-    "ax.set_aspect(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fields['halfspace'] = sim.fields(np.log(np.ones_like(model[active]) * (1/1000)))\n",
+    "ax.set_aspect(1)\n",
     "\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(10, 10)) \n",
-    "ylim = np.r_[-525, 125]\n",
-    "time_ind = 30\n",
     "\n",
     "key = \"L_block\"\n",
-    "src_ind = 0\n",
+    "ylim = np.r_[-525, 125]\n",
     "subtract = \"halfspace\" \n",
     "\n",
     "plotme = fields[key][source_list[src_ind], \"b\"][:, 2]\n",
-    "print(fields[subtract])\n",
-    "# print(plot_me)\n",
+    "\n",
     "if subtract is not None:\n",
     "    plotme = plotme - fields[subtract][source_list[src_ind], \"dbdt\"][:, time_ind]\n",
     "\n",
@@ -750,11 +792,20 @@
     "    pcolor_opts={\"cmap\": 'magma'}\n",
     ")\n",
     "plt.colorbar(out[1], ax=ax, shrink=0.5, pad=0.1)\n",
-    "ax.set_xlim(xlim)\n",
-    "ax.set_ylim(ylim)\n",
-    "ax.set_title(f\"Anomalous dB/dt real, {frequencies[10]} sec, YZ slice\")\n",
-    "ax.set_aspect(1)"
+    "ax[0, 1].set_xlim(xlim)\n",
+    "ax[0, 1].set_ylim(ylim)\n",
+    "ax[0, 1].set_title(f\"Anomalous dB/dt real, {frequencies[10]} sec, YZ slice\")\n",
+    "ax[0, 1].set_aspect(1)\n",
+    "\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -780,6 +831,12 @@
    },
    "outputs": [],
    "source": [
+    "# Fill the data object\n",
+    "fwd_data.dobs = sim.survey.dobs\n",
+    "fwd_data.standard_deviation = stdnew.flatten()  # sim.survey.std\n",
+    "sim.survey.std = stdnew.flatten()\n",
+    "survey.std = stdnew.flatten()\n",
+    "\n",
     "Wd = 1 / survey.std\n",
     "plt.hist(Wd, 100)\n",
     "plt.show()\n",
