updates to VAE and PPCA notebooks

--- a/courses/cpsc540/code/vae-timeseries.ipynb
+++ b/courses/cpsc540/code/vae-timeseries.ipynb
@@ -322,6 +322,8 @@
     "            plt.colorbar()\n",
     "            break\n",
     "\n",
+    "\n",
+    "# this is plotting the loss\n",
     "error = [item.detach().numpy() for item in error]\n",
     "plt.plot(np.hstack(error))"
    ]
@@ -344,6 +346,7 @@
     }
    ],
    "source": [
+    "# this plots the latent space\n",
     "plot_latent(vae, train_loader)"
    ]
   },
