bayesian inversion  and SAM-PGI integration

--- a/PGI/dcip/dcip2d.ipynb
+++ b/PGI/dcip/dcip2d.ipynb
@@ -1274,65 +1274,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([33, 33, 33, 33, 33, 33, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34,\n",
-       "        34, 34, 34, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35,\n",
-       "        35, 35, 35, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36,\n",
-       "        36, 36, 36, 36, 36, 36, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37,\n",
-       "        37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 38, 38, 38, 38, 38, 38,\n",
-       "        38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38,\n",
-       "        39, 39, 39, 39, 39, 39, 39, 39, 39, 39, 39, 39, 39, 39, 39, 39, 39,\n",
-       "        39, 39, 39, 39, 39, 39, 39, 39, 40, 40, 40, 40, 40, 40, 40, 40, 40,\n",
-       "        40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 41,\n",
-       "        41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41,\n",
-       "        41, 41, 41, 41, 41, 41, 41, 41, 42, 42, 42, 42, 42, 42, 42, 42, 42,\n",
-       "        42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42,\n",
-       "        43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43,\n",
-       "        43, 43, 43, 43, 43, 43, 43, 43, 43, 44, 44, 44, 44, 44, 44, 44, 44,\n",
-       "        44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44,\n",
-       "        44, 45, 45, 45, 45, 45, 45, 45, 45, 45, 45, 45, 45, 45, 45, 45, 45,\n",
-       "        45, 45, 45, 45, 45, 45, 45, 45, 45, 46, 46, 46, 46, 46, 46, 46, 46,\n",
-       "        46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 47,\n",
-       "        47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47,\n",
-       "        47, 47, 47, 47, 48, 48, 48, 48, 48, 48, 48, 48, 48, 48, 48, 48, 48,\n",
-       "        48, 48, 48, 48, 48, 49, 49, 49, 49, 49, 49, 49, 49, 49, 49, 49, 49,\n",
-       "        49, 49, 49], dtype=int64),\n",
-       " array([78, 79, 80, 81, 82, 83, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84,\n",
-       "        85, 86, 87, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86,\n",
-       "        87, 88, 89, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85,\n",
-       "        86, 87, 88, 89, 90, 91, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82,\n",
-       "        83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 72, 73, 74, 75, 76, 77,\n",
-       "        78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94,\n",
-       "        72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88,\n",
-       "        89, 90, 91, 92, 93, 94, 95, 96, 73, 74, 75, 76, 77, 78, 79, 80, 81,\n",
-       "        82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 73,\n",
-       "        74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90,\n",
-       "        91, 92, 93, 94, 95, 96, 97, 98, 73, 74, 75, 76, 77, 78, 79, 80, 81,\n",
-       "        82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98,\n",
-       "        74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90,\n",
-       "        91, 92, 93, 94, 95, 96, 97, 98, 99, 74, 75, 76, 77, 78, 79, 80, 81,\n",
-       "        82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98,\n",
-       "        99, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90,\n",
-       "        91, 92, 93, 94, 95, 96, 97, 98, 99, 76, 77, 78, 79, 80, 81, 82, 83,\n",
-       "        84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 77,\n",
-       "        78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94,\n",
-       "        95, 96, 97, 98, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91,\n",
-       "        92, 93, 94, 95, 96, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91,\n",
-       "        92, 93, 94], dtype=int64))"
+       "array([87, 81, 83, 84, 86], dtype=int64)"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.where(result[2]['segmentation'].T == True)\n",
+    "np.random.choice(np.where(result[3]['segmentation'].T == True)[1], 5)\n",
     "# import numpy as np\n",
     "\n",
     "# def is_point_in_set(single_point, point_set):\n",
