updates to sampling methods and gmmref+SAM

--- a/PGI/dcip/dcip2d.ipynb
+++ b/PGI/dcip/dcip2d.ipynb
@@ -1112,17 +1112,17 @@
     "\n",
     "print(onion)\n",
     "\n",
-    "plt.hist(mcluster.reshape(meshCore.shape_cells, order='F')[result[2]['segmentation']], 100)\n",
-    "plt.show()\n",
-    "print(1 / np.exp(mcluster.reshape(meshCore.shape_cells, order='F')[result[2]['segmentation']].min()))\n",
-    "print(1 / np.exp(mcluster.reshape(meshCore.shape_cells, order='F')[result[2]['segmentation']].max()))\n",
-    "print(np.var(mcluster.reshape(meshCore.shape_cells, order='F')[result[2]['segmentation']]))\n",
+    "# plt.hist(mcluster.reshape(meshCore.shape_cells, order='F')[result[2]['segmentation']], 100)\n",
+    "# plt.show()\n",
+    "# print(1 / np.exp(mcluster.reshape(meshCore.shape_cells, order='F')[result[2]['segmentation']].min()))\n",
+    "# print(1 / np.exp(mcluster.reshape(meshCore.shape_cells, order='F')[result[2]['segmentation']].max()))\n",
+    "# print(np.var(mcluster.reshape(meshCore.shape_cells, order='F')[result[2]['segmentation']]))\n",
     "\n",
-    "plt.hist(mcluster.reshape(meshCore.shape_cells, order='F')[result[3]['segmentation']], 100)\n",
-    "plt.show()\n",
-    "print(1 / np.exp(mcluster.reshape(meshCore.shape_cells, order='F')[result[3]['segmentation']].min()))\n",
-    "print(1 / np.exp(mcluster.reshape(meshCore.shape_cells, order='F')[result[3]['segmentation']].max()))\n",
-    "print(np.var(mcluster.reshape(meshCore.shape_cells, order='F')[result[3]['segmentation']]))\n"
+    "# plt.hist(mcluster.reshape(meshCore.shape_cells, order='F')[result[3]['segmentation']], 100)\n",
+    "# plt.show()\n",
+    "# print(1 / np.exp(mcluster.reshape(meshCore.shape_cells, order='F')[result[3]['segmentation']].min()))\n",
+    "# print(1 / np.exp(mcluster.reshape(meshCore.shape_cells, order='F')[result[3]['segmentation']].max()))\n",
+    "# print(np.var(mcluster.reshape(meshCore.shape_cells, order='F')[result[3]['segmentation']]))\n"
    ]
   },
   {
@@ -1426,6 +1426,11 @@
     }
    ],
    "source": [
+    "from segment_anything import sam_model_registry\n",
+    "from segment_anything import SamAutomaticMaskGenerator\n",
+    "from PIL import Image\n",
+    "from matplotlib import cm\n",
+    "\n",
     "# print(np.where(result2[6]['segmentation'] == True))\n",
     "# def calculate_iou(mask1, mask2):\n",
     "#     \"\"\"\n",
@@ -1461,6 +1466,32 @@
     "\n",
     "print(onion2[1:, 1:])\n",
     "\n",
+    "def calculate_iou(mask1, mask2):\n",
+    "    \"\"\"\n",
+    "    Calculate the Intersection over Union (IoU) between two binary masks.\n",
+    "\n",
+    "    Parameters:\n",
+    "        mask1 (numpy.ndarray): The first binary mask.\n",
+    "        mask2 (numpy.ndarray): The second binary mask.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The Intersection over Union (IoU) score.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Ensure the masks have the same shape\n",
+    "    if mask1.shape != mask2.shape:\n",
+    "        raise ValueError(\"Mask shapes do not match.\")\n",
+    "\n",
+    "    # Convert masks to binary (0 or 1) values\n",
+    "    mask1 = np.array(mask1 > 0, dtype=np.uint8)\n",
+    "    mask2 = np.array(mask2 > 0, dtype=np.uint8)\n",
+    "\n",
+    "    intersection = np.logical_and(mask1, mask2).sum()\n",
+    "    union = np.logical_or(mask1, mask2).sum()\n",
+    "\n",
+    "    iou = intersection / union if union > 0 else 0.0\n",
+    "    return iou\n",
+    "\n",
     "class GaussianMixtureMarkovRandomField(utils.WeightedGaussianMixture):\n",
     "\n",
     "    def __init__(\n",
@@ -1491,6 +1522,7 @@
     "        anisotropy=None,\n",
     "        index_anisotropy=None, # Dictionary with anisotropy and index\n",
     "        index_kdtree=None,# List of KDtree\n",
+    "        segmentation_model_checkpoint=r\"C:\\Users\\johnk\\Documents\\git\\jresearch\\PGI\\dcip\\sam_vit_h_4b8939.pth\",\n",
     "        #**kwargs\n",
     "    ):\n",
     "\n",
@@ -1521,6 +1553,10 @@
     "        self.anisotropy = anisotropy\n",
     "        self.norm = norm\n",
     "        self.mask = masks\n",
+    "\n",
+    "        # load segmentation network model\n",
+    "        sam = sam_model_registry[\"vit_h\"](checkpoint=segmentation_model_checkpoint)\n",
+    "        self.mask_generator = SamAutomaticMaskGenerator(sam)\n",
     "\n",
     "        if self.mesh.gridCC.ndim == 1:\n",
     "            xyz = np.c_[self.mesh.gridCC]\n",
@@ -1564,6 +1600,120 @@
     "            #print('Computing new neighbors based on rock units, it may take several minutes.')\n",
     "            #for i, unitindex in enumerate(self.index_anisotropy['index']):\n",
     "        #        _, self.indexpoint[unitindex] = self.index_kdtree[i].query(self.unitxyz[i][unitindex], k=self.kneighbors+1)\n",
+    "\n",
+    "    def update_neighbors_index(\n",
+    "            \n",
+    "            self,\n",
+    "            model:np.ndarray\n",
+    "            \n",
+    "    ) -> None:\n",
+    "        \"\"\"\n",
+    "        \n",
+    "            method that segments the input model and assigns new neighbors described\n",
+    "            by the segmentation map\n",
+    "\n",
+    "            :param model: geophysical model\n",
+    "            :type model: np.ndarray\n",
+    "\n",
+    "        \"\"\"\n",
+    "\n",
+    "        model_normalized = np.exp(model) / np.abs(np.exp(model)).max()\n",
+    "\n",
+    "        image_rgb = Image.fromarray(np.uint8(cm.jet(model_normalized.reshape(self.mesh.shape_cells, order='F'))*255))\n",
+    "        image_rgb = image_rgb.convert('RGB')\n",
+    "\n",
+    "        result = self.mask_generator.generate(np.asarray(image_rgb))\n",
+    "\n",
+    "\n",
+    "        # ---------------------------------------------------------------------------------------------\n",
+    "\n",
+    "        # create a matrix that holds information about overlapping mask if they happen to\n",
+    "\n",
+    "        # this is done using intersection over union method\n",
+    "\n",
+    "        #\n",
+    "\n",
+    "        nlayers = self.kneighbors\n",
+    "\n",
+    "        union_matrix = np.zeros((nlayers, nlayers))\n",
+    "        for ii in range(nlayers):\n",
+    "            for jj in range(nlayers):\n",
+    "                iou_score = calculate_iou(result[ii]['segmentation'], result[jj]['segmentation'])\n",
+    "                union_matrix[ii, jj] = iou_score\n",
+    "                print(\"IoU score:\", iou_score)\n",
+    "\n",
+    "        # ------------------------------------------------------------------------------------\n",
+    "\n",
+    "        # modify the overlap matrix to assign the proper neighbors mask in the case of onions\n",
+    "\n",
+    "        #\n",
+    "\n",
+    "        sub_union_matrix = union_matrix[1:, 1:].copy()\n",
+    "\n",
+    "        # calculate how many non zero in a row of our overlap matrix\n",
+    "        for jj in range(sub_onion.shape[0]):\n",
+    "\n",
+    "            if np.count_nonzero(sub_onion[jj, :]) > 1:\n",
+    "\n",
+    "                mask_index = np.nonzero(sub_union_matrix[jj, :])\n",
+    "                print(mask_index[0][-1])\n",
+    "                sub_union_matrix[jj, mask_index[0][-1]] = 1\n",
+    "                sub_union_matrix[jj, mask_index[0][0]] = 0\n",
+    "\n",
+    "                # --------------------------------------------------------------------------------------\n",
+    "\n",
+    "                # assign each cell a mask to assign it's neighbors\n",
+    "\n",
+    "                #\n",
+    "\n",
+    "                hx, hy = mesh.shape_cells\n",
+    "                x = np.arange(hx)\n",
+    "                y = np.arange(hy)\n",
+    "                xx, yy = np.meshgrid(x, y)\n",
+    "\n",
+    "                mask_locations = np.vstack([xx.flatten(), yy.flatten()])\n",
+    "\n",
+    "                mask_assignment = np.zeros(mask_locations.shape[1])\n",
+    "\n",
+    "                for ii in range(mask_locations.shape[1]):\n",
+    "\n",
+    "                    for jj in range(nlayers - 1):\n",
+    "\n",
+    "                        idx = np.vstack(np.where(result[jj + 1]['segmentation'] == True))\n",
+    "\n",
+    "                        point_set = idx.T\n",
+    "\n",
+    "                        # print(point_set.shape, np.vstack(idx).shape, xx.shape)\n",
+    "                        distances = np.sqrt(np.sum((point_set - mask_locations[:, ii].T)**2, axis=1))\n",
+    "                        # print(jj, mask_assignment[:, ii].T, point_set[0, :])\n",
+    "                        min_distance = np.min(distances)\n",
+    "                        \n",
+    "                        if min_distance == 0:\n",
+    "                            mask_assignment[ii] = jj + 1\n",
+    "\n",
+    "                plt.hist(mask_assignment)\n",
+    "\n",
+    "                # ----------------------------------------------------------------------------------------\n",
+    "\n",
+    "                # now update the indexpoint matrix\n",
+    "\n",
+    "                #\n",
+    "\n",
+    "                for kk in range(mask_assignment.shape[0]):\n",
+    "\n",
+    "                    idx = np.vstack(np.where(result[jj + 1]['segmentation'] == True))\n",
+    "                    shape_idx = idx.shape[0]\n",
+    "\n",
+    "                    # if the mask is smaller than the user defined number of neighbors\n",
+    "                    if idx.shape[0] < (self.kneighbors + 1):\n",
+    "\n",
+    "                        self.indexpoint[kk, :] = self.indexpoint[kk, 0]\n",
+    "                        self.indexpoint[kk, -shape_idx:] = idx\n",
+    "\n",
+    "                    # otherwise assign the entire mask\n",
+    "                    else:\n",
+    "\n",
+    "                        self.indexpoint[kk, :] = idx[:(self.kneighbors + 1)]\n",
     "\n",
     "\n",
     "    def computeG(self, z, w, X):\n",
@@ -1691,6 +1841,13 @@
     "                                                        lower=True)\n",
     "        else:\n",
     "            self.precisions_cholesky_ = self.precisions_init\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$g_i = \\min_{\\boldsymbol{\\mu}_n} \\big \\| \\mathbf{m}_i - \\boldsymbol{\\mu}_n \\big \\|^2$$"
    ]
   },
   {
