updates to geoseg

--- a/PGI/dcip/dcip2d.ipynb
+++ b/PGI/dcip/dcip2d.ipynb
@@ -1665,6 +1665,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This is the code that plots the distributions in resistivity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 178,
    "metadata": {},
@@ -1741,6 +1748,13 @@
     "ax.legend(loc=0,fontsize=18)\n",
     "ax.set_ylim([0.,12])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification"
    ]
   },
   {
