--- a/geological_segmentation/report/figures/rotated_gradients.tex
+++ b/geological_segmentation/report/figures/rotated_gradients.tex
@@ -7,6 +7,6 @@
 \caption{
     Recovered models and their distributions a) the true model, b) Tikhonov result, c) PGI result d) PGI with geological segmentation used for the classification.
 }
-\label{fig:data-normalizations}
+\label{fig:rotated_gradient}
 \vspace{-0.1cm}
 \end{figure}
