updated scripts and latex for geoseg paper

--- a/geological_segmentation/report/equations/objective_function.tex
+++ b/geological_segmentation/report/equations/objective_function.tex
@@ -1,6 +1,6 @@
 \vspace{-0.1cm}
 \begin{equation}
-    \underset{\mathbf{m}}{min} \; \phi(\mathbf{m}) = \phi_{d}(\mathbf{m}) + \beta\phi_{m}(\mathbf{m})
+    \underset{\mathbf{m}}{min} \; \phi(\mathbf{m}) = \phi_{d}(\mathbf{m}) + \beta\phi_{m}(\mathbf{m}) \hspace{3mm} s.t \hspace{2mm} \phi_d \leq \phi_d^*
     \label{eq:forward-pass}
     \vspace{-0.05cm}
 \end{equation}
