--- a/geological_segmentation/report/equations/smoothness_rotated_general.tex
+++ b/geological_segmentation/report/equations/smoothness_rotated_general.tex
@@ -1,6 +1,6 @@
 \vspace{-0.1cm}
 \begin{equation}
-    \phi_{smoothness}(\mathbf{m}) = \int_{V} \nabla \mathbf{m} \cdot \mathbf{a} \nabla \mathbf{m} \;dV
+    \phi_{smoothness}(\mathbf{m}) = \int_{V} \nabla \mathbf{m} \cdot \mathbf{A} \nabla \mathbf{m} \;dV
     \label{eq:forward-pass}
     \vspace{-0.05cm}
 \end{equation}
