--- a/geological_segmentation/report/equations/rotation_tensor.tex
+++ b/geological_segmentation/report/equations/rotation_tensor.tex
@@ -1,6 +1,6 @@
 \vspace{-0.1cm}
 \begin{equation}
     \mathbf{a} = \mathbf{Q} \mathbf{L} \mathbf{Q}^{-1}
-    \label{eq:forward-pass}
+    \label{eq:a_matrix}
     \vspace{-0.05cm}
 \end{equation}
